--- a/templets/mzip/css/style.css
+++ b/templets/mzip/css/style.css
@@ -225,7 +225,8 @@ img {
 	padding: 20px 0;
 }
 .copy-right {
-	float: left;
+	/*float: left;*/
+	text-align:center;
 	line-height: 180%;
 }
 .fot-logo {
@@ -421,7 +422,7 @@ ul.list li {
 	margin-bottom: 10px;
 }
 .view-box div.content {
-	line-height: 140%;
+	line-height: 1.8rem;
 	font-size: 14px;
 }
 .view-box div.content p {
@@ -430,4 +431,35 @@ ul.list li {
 }
 body .view-box div.content img {
 	display: inline;
+	text-align:center;
+	margin:auto;
 }
+
+
+
+
+/* online */
+
+
+#online_qq_layer{z-index:99999999999;position:fixed;right:0px;top:0;margin:150px 0 0 0;}
+*html,*html body{background-image:url(about:blank);background-attachment:fixed;}
+*html #online_qq_layer{position:absolute;top:expression(eval(document.documentElement.scrollTop));}
+
+#online_qq_tab{width:28px;float:left;margin:120px 0 0 0;position:relative;z-index:9;}
+#online_qq_tab a{display:block;height:118px;line-height:999em;overflow:hidden;}
+#online_qq_tab a#floatShow{background-position:-30px -374px; background:url(../images/pa_01.png) no-repeat;}
+#online_qq_tab a#floatHide{background-position:0 -374px; background:url(../images/pa_01.png) no-repeat; right:-3px; position:relative;}
+
+#onlineService{display:inline;margin-left:-1px;float:left;width:130px;display:none; overflow:hidden;}
+.top_a{ display:block; width:130px; height:9px; background:url(../images/top_01.png) no-repeat;}
+.top_b{ display:block; width:130px; overflow:hidden; min-height:11px; background:url(../images/top_02.png) repeat;}
+.top_b ul{ display:block; width:100px; padding:0 15px; overflow:hidden;}
+.top_b ul i{ display:block; border-bottom:1px solid #85d6f6; height:35px; line-height:35px; font-size:14px; font-family:'微软雅黑'; text-align:center; color:#0076dd;}
+.online_qq{ display:block; width:100%; overflow:hidden;}
+.online_qq li{ display:block; width:100%; height:36px; border-bottom:1px #dddddd solid;line-height: 37px;padding-left: 31px;}
+.online_qq li a{ color:#005ca8;}
+.top_c{ display:block; width:130px; height:9px; background:url(../images/top_03.png) no-repeat;}
+.top_d{ display:block; width:130px; height:9px; background:url(../images/top_04.png) no-repeat;}
+.top_e{ display:block; width:130px; overflow:hidden; min-height:11px;background:url(../images/top_02.png) repeat;}
+.top_f{ display:block; width:130px; height:9px; background:url(../images/top_05.png) no-repeat;}
+
